# nycodex

./: .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  conftest.py  postgrest.conf  pyproject.toml  setup.cfg  setup.py
nycodex/: config.py  conftest.py  db.py  logging.py
nycodex/db/: __init__.py  base.py  inference.py  metadata.py  queue.py  schema.py  utils.py
nycodex/db/tests/: conftest.py  test_db_queue.py  test_db_utils.py
nycodex/inference/: __init__.py
nycodex/inference/tests/: test_inclusions.py
nycodex/scrape/: __init__.py  dataset.py  exceptions.py  metadata.py  utils.py
nycodex/scrape/tests/: test_dataset_columns.py  test_scrape_dataset.py
nycodex/scrape/tests/fixtures/63us-eqtq/: data.csv  metadata.json
nycodex/scrape/tests/fixtures/656a-faqy/: metadata.json
nycodex/scrape/tests/fixtures/datasets/63us-eqtq/: metadata.json
nycodex/scrape/tests/fixtures/datasets/656a-faqy/: data.csv
nycodex/scrape/tests/fixtures/datasets/ddkm-23bb/: data.csv  metadata.json
nycodex/scrape/tests/fixtures/datasets/rskq-5bfv/: metadata.json
nycodex/scrape/tests/fixtures/geojson/58k2-kgtb/: data.geojson  metadata.json
nycodex/scrape/tests/fixtures/geojson/a9we-mtpn/: data.geojson  metadata.json
nycodex/scrape/tests/fixtures/pfbw-d97h/: metadata.json
nycodex/scrape/tests/fixtures/rskq-5bfv/: data.csv
nycodex/tests/: test_db.py
scripts/: bootstrap.sh  drop.sh  drop_all.py  infer_inclusions.py  postgrest.sql  setup.sql  socrata.py  socrata_metadata.py  socrata_raw.py
