[tool.black]
line-length = 79

[tool.poetry]
name = "nycodex"
version = "0.1.0"
description = ""
authors = ["Alan Du <alanhdu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
sqlalchemy = "^1.3.15"
pytz = "^2019.3"
structlog = "^20.1.0"
python-dotenv = "^0.12.0"
psycopg2 = "^2.8.4"
pandas = "^1.0.3"
geopandas = "^0.7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
black = "^19.10b0"
isort = "^4.3.21"
pytest = "^5.4.1"
"testing.postgresql" = "^1.3.0"
pytest-mock = "^3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
